--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker: ^0.8.4+4
   mime: ^1.0.0
   image: ^3.0.1
+  path_provider: ^2.0.11
+  intl: ^0.17.0
   #added by gpt
 dev_dependencies:
   flutter_test:
